Fix code repo member 3